# ExelyMCP

./: .gitignore  .pre-commit-config.yaml  LICENSE  main.py  pyproject.toml
.github/: CODEOWNERS
